crates/symbi-kloop-bench/tests/compile-fail/check_policy_on_dispatching.stderr
warning: unreachable statement
  --> tests/compile-fail/check_policy_on_dispatching.rs:35:5
   |
29 |         panic!("placeholder; the compile error must precede this line");
   |         --------------------------------------------------------------- any code following this expression is unreachable
...
35 |     let _ = dispatching.check_policy(panic!("gate"));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `check_policy` found for struct `AgentLoop<ToolDispatching>` in the current scope
  --> tests/compile-fail/check_policy_on_dispatching.rs:35:25
   |
35 |     let _ = dispatching.check_policy(panic!("gate"));
   |                         ^^^^^^^^^^^^ method not found in `AgentLoop<ToolDispatching>`
   |
   = note: the method was found for
           - `AgentLoop<PolicyCheck>`

warning: unreachable call
  --> tests/compile-fail/check_policy_on_dispatching.rs:35:25
   |
35 |     let _ = dispatching.check_policy(panic!("gate"));
   |                         ^^^^^^^^^^^^ -------------- any code following this expression is unreachable
   |                         |
   |                         unreachable call
